@@ -1,0 +1,32 @@
+<?php
+/**
+ * Tajik (Тоҷикӣ)
+ *
+ * @package MediaWiki
+ * @subpackage Language
+ *
+ * @author Francis Tyers
+ */
+
+$namespaceNames = array(
+	NS_MEDIA          => "Медиа",
+	NS_SPECIAL        => "Вижа",
+	NS_MAIN           => "",
+	NS_TALK           => "Баҳс",
+	NS_USER           => "Корбар",
+	NS_USER_TALK      => "Баҳси_корбар",
+	# NS_PROJECT set by $wgMetaNamespace
+	NS_PROJECT_TALK   => "Баҳси_$1",
+	NS_IMAGE          => "Акс",
+	NS_IMAGE_TALK     => "Баҳси_акс",
+	NS_MEDIAWIKI      => "Медиавики",
+	NS_MEDIAWIKI_TALK => "Баҳси_медиавики",
+	NS_TEMPLATE       => "Шаблон",
+	NS_TEMPLATE_TALK  => "Баҳси_шаблон",
+	NS_HELP           => "Роҳнамо",
+	NS_HELP_TALK      => "Баҳси_роҳнамо",
+	NS_CATEGORY       => "Гурӯҳ",
+	NS_CATEGORY_TALK  => "Баҳси_гурӯҳ",
+);
+
+?>
